--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abaca9">  <td>22/04/30 19:54:58</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.m1()[pri:0, instance:com.cybersuccess.OrangeHrmAutomationProject.AppTest@12aba8be]">&gt;&gt;m1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@979291363</td>   <td></td> </tr>
-<tr bgcolor="abaca9">  <td>22/04/30 19:54:58</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.shouldAnswerWithTrue()[pri:0, instance:com.cybersuccess.OrangeHrmAutomationProject.AppTest@12aba8be]">shouldAnswerWithTrue</td> 
-  <td>main@979291363</td>   <td></td> </tr>
-<tr bgcolor="71b7a8">  <td>22/04/30 19:54:59</td>   <td>50</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmpleTestCases.testCase()[pri:0, instance:login.SmpleTestCases@51e69659]">testCase</td> 
-  <td>main@979291363</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>22/05/04 19:51:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.addEmployee()[pri:3, instance:login.LoginTest@51e69659]">addEmployee</td> 
+  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>22/05/04 19:51:23</td>   <td>16628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closeDriver()[pri:0, instance:login.LoginTest@51e69659]">&lt;&lt;closeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>22/05/04 19:51:14</td>   <td>8322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logOut()[pri:4, instance:login.LoginTest@51e69659]">logOut</td> 
+  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/05/04 19:50:30</td>   <td>-35944</td> <td>&nbsp;</td><td title="&gt;&gt;AppTest.m1()[pri:0, instance:com.cybersuccess.OrangeHrmAutomationProject.AppTest@12aba8be]">&gt;&gt;m1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="a7f793">  <td>22/05/04 19:50:30</td>   <td>-35904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.shouldAnswerWithTrue()[pri:0, instance:com.cybersuccess.OrangeHrmAutomationProject.AppTest@12aba8be]">shouldAnswerWithTrue</td> 
+  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="ed7b7c">  <td>22/05/04 19:50:30</td>   <td>-35860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmpleTestCases.testCase()[pri:0, instance:login.SmpleTestCases@659499f1]">testCase</td> 
+  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>22/05/04 19:50:40</td>   <td>-26126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLoadHomepage()[pri:1, instance:login.LoginTest@51e69659]">testLoadHomepage</td> 
+  <td>main@768415370</td>   <td></td> </tr>
+<tr bgcolor="fcb6ab">  <td>22/05/04 19:50:47</td>   <td>-18780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLoginInsertCorrectUsernameAndPassword()[pri:2, instance:login.LoginTest@51e69659]">testLoginInsertCorrectUsernameAndPassword</td> 
+  <td>main@768415370</td>   <td></td> </tr>
 </table>
